feat: add search filters to backend endpoints (#34)
